# bloom-telnet

./: .clang-format  .gitignore  COPYING  ChangeLog  Makefile.am  NEWS  README.md  TODO.md  autogen.sh  build.sh  configure.ac
.crush/skills/commit/: SKILL.md
bloom-boba/: Makefile.am  README.md
bloom-boba/include/bloom-boba/: ansi_sequences.h  cmd.h  component.h  dynamic_buffer.h  input_parser.h  msg.h  runtime.h  tui.h
bloom-boba/include/bloom-boba/components/: textinput.h  textview.h  viewport.h
bloom-boba/src/: ansi_sequences.c  cmd.c  dynamic_buffer.c  input_parser.c  msg.c  runtime.c
bloom-boba/src/components/: textinput.c  textview.c  viewport.c
build-aux/: git-version.sh
include/: Makefile.am  telnet.h  terminal_caps.h
lisp/: Makefile.am  init-post.lisp  init.lisp  tintin-actions.lisp  tintin-aliases.lisp  tintin-commands.lisp  tintin-conditional.lisp  tintin-highlights.lisp  tintin-patterns.lisp  tintin-save.lisp  tintin-state.lisp  tintin-tables.lisp  tintin-utils.lisp  tintin.lisp
lisp/contrib/: practice.lisp  spell-translator.lisp  spell-translator.lisp.template  tintin-actions.lisp  tintin-aliases.lisp  tintin-colors.lisp  tintin-commands.lisp  tintin-highlights.lisp  tintin-parsing.lisp  tintin-patterns.lisp  tintin-read.lisp  tintin-save.lisp  tintin-speedwalk.lisp  tintin-state.lisp  tintin-tables.lisp  tintin-utils.lisp  tintin.lisp
src/: Makefile.am  ansi_sequences.c  ansi_sequences.h  colors.h  commands.c  commands.h  dynamic_buffer.c  dynamic_buffer.h  lisp_extension.c  lisp_extension.h  logging.c  logging.h  main.c  path_utils.c  path_utils.h  session.c  session.h  telnet.c  telnet_app.c  telnet_app.h  telnet_internal.h  terminal_caps.c
tests/: Makefile.am  bench-completion.lisp  bench-trie-insert.lisp  build-spell-translator.sh  extract-spell-dict-values.lisp  generate-known-spell-words.sh  hooks.lisp  init-post.lisp  init.lisp  practice.lisp  run-bench.sh  run-test.sh  script-echo.lisp  session.lisp  slash-commands.lisp  spell-translator-suggest.lisp  spell-translator-suggest.sh  spell-translator.lisp  statusbar.lisp  test-case-completion.lisp  test-helpers.lisp  test-loader.lisp  test_add_hook_fixnum.c  test_completion_pipeline.lisp  test_event_loop.c  test_server.py  test_telnet_app.c  test_telnet_connect_fixnum.c  test_test_server.py  test_word_scan.lisp  testkit.h  tintin-action-depth.lisp  tintin-alias-ordering.lisp  tintin-colors.lisp  tintin-commands.lisp  tintin-conditional.lisp  tintin-highlights.lisp  tintin-parsing.lisp  tintin-patterns.lisp  tintin-speedwalk.lisp
tests/bench-data/: clean-1k.txt  clean-200.txt  clean-2k.txt  clean-4k.txt  clean-500.txt  clean-5k.txt  prepare-payloads.py  recv-1k.txt  recv-200.txt  recv-2k.txt  recv-4k.txt  recv-500.txt  recv-5k.txt
