# lisp/Makefile.am - Lisp configuration files

lispdir = $(pkgdatadir)/lisp

dist_lisp_DATA = \
    init.lisp \
    init-post.lisp \
    tintin.lisp \
    tintin-state.lisp \
    tintin-utils.lisp \
    tintin-colors.lisp \
    tintin-patterns.lisp \
    tintin-parsing.lisp \
    tintin-speedwalk.lisp \
    tintin-highlights.lisp \
    tintin-actions.lisp \
    tintin-aliases.lisp \
    tintin-tables.lisp \
    tintin-commands.lisp \
    tintin-save.lisp

contribdir = $(pkgdatadir)/lisp/contrib

dist_contrib_DATA = \
    contrib/practice.lisp \
    contrib/spell-translator.lisp
