# lisp/Makefile.am - Lisp configuration files

lispdir = $(pkgdatadir)/lisp

dist_lisp_DATA = \
    init.lisp

contribdir = $(pkgdatadir)/lisp/contrib

dist_contrib_DATA = \
    contrib/tintin.lisp \
    contrib/tintin-state.lisp \
    contrib/tintin-utils.lisp \
    contrib/tintin-colors.lisp \
    contrib/tintin-patterns.lisp \
    contrib/tintin-parsing.lisp \
    contrib/tintin-speedwalk.lisp \
    contrib/tintin-highlights.lisp \
    contrib/tintin-actions.lisp \
    contrib/tintin-aliases.lisp \
    contrib/tintin-tables.lisp \
    contrib/tintin-commands.lisp \
    contrib/tintin-read.lisp \
    contrib/tintin-save.lisp \
    contrib/practice.lisp \
    contrib/spell-translator.lisp
